--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rafael.appnokia">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".View.Order" />
-        <activity android:name=".View.Sub_Task"></activity>
+        <activity android:name=".View.Sub_Task" />
+        <activity android:name=".View.Task_to_be"></activity>
     </application>
 
 </manifest>
